--- a/configuration.yaml
+++ b/configuration.yaml
@@ -51,7 +51,7 @@ notify:
   - name: michael_jeanie_iphones
     platform: group
     services:
-      - service: notify.ios_echelon
+      - service: ios_echelon
 
 cover:
   - platform: myq
