--- a/automation/garage_door.yaml
+++ b/automation/garage_door.yaml
@@ -6,6 +6,12 @@
   trigger:
     - platform: time
       at: '21:05:00'
+  condition:
+      condition: and
+      conditions:
+        - condition: state
+          entity_id: cover.garage_door
+          state: open
   action:
     - service_template: "cover.close_cover"
       entity_id: cover.garage_door
