--- a/automation/espresso_machine.yaml
+++ b/automation/espresso_machine.yaml
@@ -6,6 +6,12 @@
   trigger:
     - platform: time
       at: '05:00:00'
+  condition:
+      condition: and
+      conditions:
+        - condition: state
+          entity_id: group.all_devices
+          state: 'home'
   action:
     service_template: "switch.turn_on"
     entity_id: switch.espresso_machine
