--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -24,3 +24,4 @@ amazon_user: xxxxxxxxxxxxxxxxxxxxxx
 amazon_password: xxxxxxxxxxxxxxxxxxxxxx
 ring_username: xxxxxxxxxxxxxxxxxxxxxx
 ring_password: xxxxxxxxxxxxxxxxxxxxxx
+rachio_api_key: xxxxxxxxxxxxxxxxxxxxxx
