Fixed yaml formatting

--- a/automation/hannah.yaml
+++ b/automation/hannah.yaml
@@ -5,11 +5,21 @@
 - alias: 'Hannah bedtime, 10 minute warning'
   trigger:
     - platform: time
-      at: '14:30:00'
+      at: '14:37:00'
    action:
-   - service: media_player.alexa_tts
+    - service: media_player.alexa_tts
       data:
         entity_id: 
           - media_player.michael_s_echo
-        message: "ding dong! hey Hannah, 10 minutes until bedtime, ok?" 
+        message: "ding dong! hey Hannah, 10 minutes until bedtime, please go brush your teeth." 
+- alias: 'Hannah bedtime'
+  trigger:
+    - platform: time
+      at: '21:00:00'
+   action:
+    - service: media_player.alexa_tts
+      data:
+        entity_id: 
+          - media_player.michael_s_echo
+        message: "ding dong! hey Hannah, it's bedtime." 
 
