--- a/automation/garage_door.yaml
+++ b/automation/garage_door.yaml
@@ -15,6 +15,8 @@
   action:
     - service_template: "cover.close_cover"
       entity_id: cover.garage_door_main
+    - service_template: "cover.close_cover"
+      entity_id: cover.garage_door_small
     - delay:
         seconds: 5
     - service: notify.michael_jeanie_iphones
