Changed name of garage buttons

--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -75,7 +75,7 @@ views:
                 entity_id: lock.schlage_allegion_unknown_type_0001_id_0468_locked
           - type: entity-button
             entity: cover.garage_door_main
-            name: Garage Door Main
+            name: Garage Main
             tap_action:
               action: call-service
               service: cover.open_cover
@@ -88,7 +88,7 @@ views:
                 entity_id: cover.garage_door_main
           - type: entity-button
             entity: cover.garage_door_small
-            name: Garage Door Small
+            name: Garage Small
             tap_action:
               action: call-service
               service: cover.open_cover
