--- a/automation/hannah.yaml
+++ b/automation/hannah.yaml
@@ -1,5 +1,5 @@
 #####################################################################################
-### Notify Hannah of nightly routines 
+### Notify Hannah of nightly routines
 #####################################################################################
 
 - alias: 'Hannah bedtime, 10 minute warning'
@@ -9,9 +9,9 @@
   action:
     - service: media_player.alexa_tts
       data:
-        entity_id: 
+        entity_id:
           - media_player.michael_s_echo
-        message: "ding dong! hey Hannah, 10 minutes until bedtime, please go brush your teeth." 
+        message: "ding dong! hey Hannah, 10 minutes until bedtime, please go brush your teeth."
 - alias: 'Hannah bedtime'
   trigger:
     - platform: time
@@ -19,7 +19,32 @@
   action:
     - service: media_player.alexa_tts
       data:
-        entity_id: 
+        entity_id:
           - media_player.michael_s_echo
-        message: "ding dong! hey Hannah, it's bedtime." 
-
+        message: "ding dong! hey Hannah, it's bedtime."
+- alias: 'Hannah Heater Off'
+  trigger:
+    - platform: time
+      at: '05:00:00'
+  condition:
+      condition: and
+      conditions:
+        - condition: state
+          entity_id: group.mobile_trackers
+          state: 'home'
+  action:
+    service_template: "switch.turn_off"
+    entity_id: switch.hannah_heater
+- alias: 'Espresso Machine On'
+  trigger:
+    - platform: time
+      at: '16:00:00'
+  condition:
+      condition: and
+      conditions:
+        - condition: state
+          entity_id: group.mobile_trackers
+          state: 'home'
+  action:
+    service_template: "switch.turn_on"
+    entity_id: switch.hannah_heater
