--- a/automation/hannah.yaml
+++ b/automation/hannah.yaml
@@ -35,7 +35,7 @@
   action:
     service_template: "switch.turn_off"
     entity_id: switch.hannah_heater
-- alias: 'Espresso Machine On'
+- alias: 'Hannahs Heater On'
   trigger:
     - platform: time
       at: '16:00:00'
