--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -110,14 +110,14 @@ views:
       - type: horizontal-stack
         cards:
           - type: entity-button
-            entity: switch.garage_external
+            entity: switch.jasco_products_unknown_type_4952_id_3231_switch
             icon: mdi:lightbulb
             name: Garage Ext
             tap_action:
               action: call-service
               service: switch.turn_on
               service_data:
-                entity_id: switch.garage_external
+                entity_id: switch.jasco_products_unknown_type_4952_id_3231_switch
             hold_action:
               action: call-service
               service: switch.turn_off
