--- a/automation/lights.yaml
+++ b/automation/lights.yaml
@@ -3,15 +3,15 @@
 #####################################################################################
 - alias: 'Garage External Lights On'
   trigger:
-    - platform: time
-      at: '17:00:00'
+    - platform: sun
+      event: sunset
   action:
     - service_template: "switch.turn_on"
       entity_id: switch.jasco_products_unknown_type_4952_id_3231_switch
 - alias: 'Garage External Lights Off'
   trigger:
-    - platform: time
-      at: '4:00:00'
+    - platform: sun
+      event: sunrise
   action:
     - service_template: "switch.turn_off"
       entity_id: switch.jasco_products_unknown_type_4952_id_3231_switch
