Added Jeanie work zone

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -3,6 +3,8 @@ home_latitude: 00.000000
 home_longitude: -00.000000
 home_elevation: 0000
 time_zone: America/Denver
+jeanie_work_latitude: 00.000000
+jeanie_work_longitude: -00.000000
 nest_client_id: xxxxxxxxxxxxxxxxxxxxxx
 nest_client_secret: xxxxxxxxxxxxxxxxxxxxxx
 ssl_certificate: fake_key.pem
