--- a/automation/espresso_machine.yaml
+++ b/automation/espresso_machine.yaml
@@ -35,6 +35,12 @@
           for:
             hours: 1
   action:
-    service_template: "switch.turn_off"
-    entity_id: switch.espresso_machine
+    - service_template: "switch.turn_off"
+      entity_id: switch.espresso_machine
+    - service: notify.michael_jeanie_iphones
+      data:
+        title: "Home Assistant Alerts"
+        message: "Espresso Machine was turned off as no one is home."
+        data:
+          subtitle: "Away"
 
