--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -27,3 +27,6 @@ amazon_password: xxxxxxxxxxxxxxxxxxxxxx
 ring_username: xxxxxxxxxxxxxxxxxxxxxx
 ring_password: xxxxxxxxxxxxxxxxxxxxxx
 rachio_api_key: xxxxxxxxxxxxxxxxxxxxxx
+reolink_user: xxxxxxxxxxxxxxxxxxxxxx
+reolink_password: xxxxxxxxxxxxxxxxxxxxxx
+
