--- a/configuration.yaml
+++ b/configuration.yaml
@@ -28,7 +28,7 @@ climate:
 camera:
 - platform: reolink_dev
   host: 192.168.2.2
-  name: reolink_camera
+  name: Channel03
   username: !secret reolink_user
   password: !secret reolink_password
   stream: main
