--- a/configuration.yaml
+++ b/configuration.yaml
@@ -30,7 +30,7 @@ camera:
     host: 192.168.2.2
     name: driveway
     channel: 3
-    username: !secret reolink_user
+    username: admin
     password: !secret reolink_password
     stream: main
     protocol: rtsp
