--- a/configuration.yaml
+++ b/configuration.yaml
@@ -25,6 +25,11 @@ climate:
     scan_interval: 600
     region: us
 
+remote:
+  - platform: broadlink
+    host: !secret broadlink_ip
+    mac: !secret broadlink_mac
+
 camera:
   - platform: reolink_dev
     host: 192.168.2.2
