--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -29,4 +29,6 @@ ring_password: xxxxxxxxxxxxxxxxxxxxxx
 rachio_api_key: xxxxxxxxxxxxxxxxxxxxxx
 reolink_user: xxxxxxxxxxxxxxxxxxxxxx
 reolink_password: xxxxxxxxxxxxxxxxxxxxxx
+broadlink_ip: xxxxxxxxxxxxxxxxxxxxxx
+broadlink_mac: xxxxxxxxxxxxxxxxxxxxxx
 
