Fix issue with mac in test

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -30,5 +30,5 @@ rachio_api_key: xxxxxxxxxxxxxxxxxxxxxx
 reolink_user: xxxxxxxxxxxxxxxxxxxxxx
 reolink_password: xxxxxxxxxxxxxxxxxxxxxx
 broadlink_ip: xxxxxxxxxxxxxxxxxxxxxx
-broadlink_mac: xxxxxxxxxxxxxxxxxxxxxx
+broadlink_mac: "00:00:00:00:00:00"
 
