Added more camera

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -34,7 +34,16 @@ camera:
   - platform: reolink_dev
     host: 192.168.2.2
     name: driveway
-    channel: 3
+    channel: 2
+    username: admin
+    password: !secret reolink_password
+    stream: main
+    protocol: rtsp
+camera:
+  - platform: reolink_dev
+    host: 192.168.2.2
+    name: garage
+    channel: 1
     username: admin
     password: !secret reolink_password
     stream: main
