--- a/binary_sensor/motion_basement.yaml
+++ b/binary_sensor/motion_basement.yaml
@@ -3,7 +3,7 @@ sensors:
   motion_basement:
     friendly_name: Basement Camera
     device_class: motion
-    entity_id: reokinkcamera.basement
-    value_template: "{{ is_state('reolinkcamera.basement', 'motion') }}"
+    entity_id: camera.basement
+    value_template: "{{ is_state('camera.basement', 'motion') }}"
     delay_off:
       seconds: 30
