--- a/binary_sensor/motion_garage.yaml
+++ b/binary_sensor/motion_garage.yaml
@@ -3,7 +3,7 @@ sensors:
   motion_driveway:
     friendly_name: Garage Camera
     device_class: motion
-    entity_id: reokinkcamera.garage
-    value_template: "{{ is_state('reolinkcamera.garage', 'motion') }}"
+    entity_id: camera.garage
+    value_template: "{{ is_state('camera.garage', 'motion') }}"
     delay_off:
       seconds: 30
