--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -199,6 +199,14 @@ views:
               - binary_sensor.motion_basement
             title: basement
             type: picture-glance
+          - camera_image: camera.gym
+            entities:
+              #  - switch.camera_frontdoor_ir_lights
+              #  - switch.camera_frontdoor_email
+              #  - switch.camera_frontdoor_ftp
+              - binary_sensor.motion_gym
+            title: gym
+            type: picture-glance
   - path: greatroom
     title: Living Room
     icon: 'mdi:sofa'
