Corrected motion binary sensors

--- a/binary_sensor/motion_garage.yaml
+++ b/binary_sensor/motion_garage.yaml
@@ -1,6 +1,6 @@
 platform: template
 sensors:
-  motion_driveway:
+  motion_garage:
     friendly_name: Garage Camera
     device_class: motion
     entity_id: camera.garage
