--- a/binary_sensor/motion_gym.yaml
+++ b/binary_sensor/motion_gym.yaml
@@ -1,7 +1,7 @@
 platform: template
 sensors:
   motion_gym:
-    friendly_name: Basement Camera
+    friendly_name: Gym Camera
     device_class: motion
     entity_id: camera.gym
     value_template: "{{ is_state('camera.gym', 'motion') }}"
