Removed all but one camera to test issue

--- a/camera/reolink_cameras.yaml
+++ b/camera/reolink_cameras.yaml
@@ -4,29 +4,5 @@
   channel: 0
   username: admin
   password: !secret reolink_password
-  stream: sub
-  protocol: rtsp
-- platform: reolink_dev
-  host: 192.168.2.2
-  name: garage
-  channel: 1
-  username: admin
-  password: !secret reolink_password
-  stream: sub
-  protocol: rtsp
-- platform: reolink_dev
-  host: 192.168.2.2
-  name: driveway
-  channel: 2
-  username: admin
-  password: !secret reolink_password
-  stream: sub
-  protocol: rtsp
-- platform: reolink_dev
-  host: 192.168.2.2
-  name: basement
-  channel: 3
-  username: admin
-  password: !secret reolink_password
-  stream: sub
+  stream: main
   protocol: rtsp
