--- a/camera/reolink_cameras.yaml
+++ b/camera/reolink_cameras.yaml
@@ -6,3 +6,11 @@
   password: !secret reolink_password
   stream: main
   protocol: rtsp
+- platform: reolink_dev
+  host: 192.168.2.41
+  name: driveway
+  channel: 1
+  username: admin
+  password: !secret reolink_password
+  stream: main
+  protocol: rtsp
