--- a/configuration.yaml
+++ b/configuration.yaml
@@ -103,7 +103,7 @@ camera: !include_dir_merge_list camera
 recorder: !include recorder.yaml
 logger: !include logger.yaml
 sensor: !include_dir_merge_list sensor
-binary_sensor: !include_dir_merge_list binary_sensor
+binary_sensor: !include_dir_merge_named binary_sensor
 group: !include_dir_merge_named group
 automation: !include_dir_merge_list automation
 script: !include_dir_merge_named script
