--- a/binary_sensor/motion_garage.yaml
+++ b/binary_sensor/motion_garage.yaml
@@ -1,9 +1,9 @@
-platform: template
-sensors:
-  motion_garage:
-    friendly_name: Garage Camera
-    device_class: motion
-    entity_id: camera.garage
-    value_template: "{{ is_state('camera.garage', 'motion') }}"
-    delay_off:
-      seconds: 30
+- platform: template
+  sensors:
+    motion_garage:
+      friendly_name: Garage Camera
+      device_class: motion
+      entity_id: camera.garage
+      value_template: "{{ is_state('camera.garage', 'motion') }}"
+      delay_off:
+        seconds: 30
